syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

option go_package = "./;pb";

message Certificate {
  uint32 id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  string user_id = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {format: "uuid", example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""}
  ];
  uint32 dose = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  string image_url = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"https://avatars.dicebear.com/api/open-peeps/johndee.svg\""}
  ];
  string description = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Application for a work from office permit\""}
  ];
  string admin_username = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"admin\""}
  ];
  string status = 7 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"pending\""}
  ];
  google.protobuf.Timestamp status_at = 8;
  string status_info = 9 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Sip\""}
  ];
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message CertificateDetail {
  uint32 id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  string user_id = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {format: "uuid", example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""}
  ];
  string user_username = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"johndee\""}
  ];
  string user_avatar = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"https://avatars.dicebear.com/api/open-peeps/johndee.svg\""}
  ];
  uint32 dose = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  string image_url = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"https://avatars.dicebear.com/api/open-peeps/johndee.svg\""}
  ];
  string description = 7 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Application for a work from office permit\""}
  ];
  string admin_username = 8 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"admin\""}
  ];
  string status = 9 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"pending\""}
  ];
  google.protobuf.Timestamp status_at = 10;
  string status_info = 11 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Sip\""}
  ];
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}


// Create Certificate
message CreateCertificateRequest{
  string user_id = 1 [
    (validate.rules).string.uuid = true,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {format: "uuid", example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""}
  ];
  uint32 dose = 2 [
    (validate.rules).uint32 = {gte:1, lte:3}
  ];
  string description = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Application for a work from office permit\""}
  ];
  string imageUrl = 4 [
    (validate.rules).string.min_len = 8,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"https://avatars.dicebear.com/api/open-peeps/johndee.svg\""}
  ];}

message CreateCertificateResponse {
  Certificate certificate = 1;
}

// Update Certificate By ID
message UpdateCertificateByIdRequest{
  uint32 id = 1 [
    (validate.rules).uint32.gt = 0,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  string description = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Application for a work from office permit\""}
  ];
  string imageUrl = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"https://avatars.dicebear.com/api/open-peeps/johndee.svg\""}
  ];
  string admin_username = 4 [
    (validate.rules).string.min_len = 3,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"admin\""}
  ];
  string status = 5 [
    (validate.rules).string = {in: ["approved", "pending", "rejected"]},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"approved\""}
  ];
  string status_info = 6 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Sip\""}
  ];
}

message UpdateCertificateByIdResponse {
  Certificate certificate = 1;
}

// Delete Certificate By ID
message DeleteCertificateByIdRequest { 
  uint32 id = 1 [
    (validate.rules).uint32.gt = 0,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
}

message DeleteCertificateByIdResponse {
  string message = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"Certificate deleted successfully\""}
  ];
}


// Find Certificates
message FindCertificatesRequest {
  string user_id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {format: "uuid", example: "\"2438ac3c-37eb-4902-adef-ed16b4431030\""}
  ];
  string status = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"pending\""}
  ];

  uint32 page = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  uint32 limit = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {default: "5", example: "\"10\""}
  ];
  string sort = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {default: "created_at:desc", example: "\"created_at:asc\""}
  ];
}

message FindCertificatesResponse {
  uint32 total_count = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"10\""}
  ];
  uint32 total_pages = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"2\""}
  ];
  uint32 page = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
  uint32 limit = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"5\""}
  ];
  bool has_more = 5 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"true\""}
  ];

  repeated CertificateDetail certificates = 6;
}

// Find Certificate By ID
message FindCertificateByIdRequest {
  uint32 id = 1 [
    (validate.rules).uint32.gt = 0,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {example: "\"1\""}
  ];
}

message FindCertificateByIdResponse {
  Certificate certificate = 1;
}

